objects/Vlocity_Package_Object_Item__c.object
<CustomObject>
    <fields>
        <fullName>DataRaptor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataRaptor</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity Package Object Items</relationshipLabel>
        <relationshipName>Vlocity_Package_Object_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vlocity_OmniScript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity OmniScript</label>
        <referenceTo>vlocity_cmt__OmniScript__c</referenceTo>
        <relationshipLabel>Vlocity Package Object Items</relationshipLabel>
        <relationshipName>Vlocity_Package_Object_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vlocity_Package__c</fullName>
        <label>Vlocity Package</label>
        <referenceTo>Vlocity_Package__c</referenceTo>
        <relationshipLabel>Vlocity Package Object Items</relationshipLabel>
        <relationshipName>Vlocity_Package_Object_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity Package Object Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Vlocity Package Object Itens Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vlocity Package Object Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>